versions/0.8.0/_sources/refs/_aws-cdk_aws-serverless.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"RIzL37ufd3L4Np/jgHFot0TEBfGBCWxlDnOmnddv44A="}

@aws-cdk/aws-serverless
=======================

.. mdinclude:: ./__aws-cdk_aws-serverless.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-serverless


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-serverless.cloudformation

ApiResource
~~~~~~~~~~~

.. py:class:: ApiResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApiResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApiResource``
   :type properties: :py:class:`~@aws-cdk/aws-serverless.cloudformation.ApiResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: requiredTransform

      The ``Transform`` a template must use in order to use this resource


      :type: string *(readonly)* *(static)*

   .. py:class:: S3LocationProperty



      .. py:attribute:: bucket

         ``ApiResource.S3LocationProperty.Bucket``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: key

         ``ApiResource.S3LocationProperty.Key``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: version

         ``ApiResource.S3LocationProperty.Version``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: number or :py:class:`@aws-cdk/cdk.Token`



ApiResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApiResourceProps



   .. py:attribute:: stageName

      ``AWS::Serverless::Api.StageName``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cacheClusterEnabled

      ``AWS::Serverless::Api.CacheClusterEnabled``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheClusterSize

      ``AWS::Serverless::Api.CacheClusterSize``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: definitionBody

      ``AWS::Serverless::Api.DefinitionBody``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: definitionUri

      ``AWS::Serverless::Api.DefinitionUri``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.ApiResource.S3LocationProperty` or undefined


   .. py:attribute:: apiName

      ``AWS::Serverless::Api.Name``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: variables

      ``AWS::Serverless::Api.Variables``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


FunctionResource
~~~~~~~~~~~~~~~~

.. py:class:: FunctionResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FunctionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FunctionResource``
   :type properties: :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: requiredTransform

      The ``Transform`` a template must use in order to use this resource


      :type: string *(readonly)* *(static)*

   .. py:class:: AlexaSkillEventProperty



      .. py:attribute:: variables

         ``FunctionResource.AlexaSkillEventProperty.Variables``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#alexaskill


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ApiEventProperty



      .. py:attribute:: method

         ``FunctionResource.ApiEventProperty.Method``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: path

         ``FunctionResource.ApiEventProperty.Path``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: restApiId

         ``FunctionResource.ApiEventProperty.RestApiId``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: CloudWatchEventEventProperty



      .. py:attribute:: input

         ``FunctionResource.CloudWatchEventEventProperty.Input``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#cloudwatchevent


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: inputPath

         ``FunctionResource.CloudWatchEventEventProperty.InputPath``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#cloudwatchevent


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: pattern

         ``FunctionResource.CloudWatchEventEventProperty.Pattern``
         http://docs.aws.amazon.com/AmazonCloudWatch/latest/events/CloudWatchEventsandEventPatterns.html


         :type: json or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: DeadLetterQueueProperty



      .. py:attribute:: targetArn

         ``FunctionResource.DeadLetterQueueProperty.TargetArn``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``FunctionResource.DeadLetterQueueProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: DynamoDBEventProperty



      .. py:attribute:: batchSize

         ``FunctionResource.DynamoDBEventProperty.BatchSize``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#dynamodb


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: startingPosition

         ``FunctionResource.DynamoDBEventProperty.StartingPosition``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#dynamodb


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: stream

         ``FunctionResource.DynamoDBEventProperty.Stream``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#dynamodb


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: EventSourceProperty



      .. py:attribute:: properties

         ``FunctionResource.EventSourceProperty.Properties``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#event-source-types


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.AlexaSkillEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.ApiEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.CloudWatchEventEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.DynamoDBEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.S3EventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.SNSEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.KinesisEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.ScheduleEventProperty` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.IoTRuleEventProperty`


      .. py:attribute:: type

         ``FunctionResource.EventSourceProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#event-source-object


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: FunctionEnvironmentProperty



      .. py:attribute:: variables

         ``FunctionResource.FunctionEnvironmentProperty.Variables``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: IAMPolicyDocumentProperty



      .. py:attribute:: statement

         ``FunctionResource.IAMPolicyDocumentProperty.Statement``
         http://docs.aws.amazon.com/IAM/latest/UserGuide/reference_policies.html


         :type: json or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: IoTRuleEventProperty



      .. py:attribute:: awsIotSqlVersion

         ``FunctionResource.IoTRuleEventProperty.AwsIotSqlVersion``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#iotrule


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sql

         ``FunctionResource.IoTRuleEventProperty.Sql``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#iotrule


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: KinesisEventProperty



      .. py:attribute:: batchSize

         ``FunctionResource.KinesisEventProperty.BatchSize``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#kinesis


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: startingPosition

         ``FunctionResource.KinesisEventProperty.StartingPosition``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#kinesis


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: stream

         ``FunctionResource.KinesisEventProperty.Stream``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#kinesis


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: S3EventProperty



      .. py:attribute:: bucket

         ``FunctionResource.S3EventProperty.Bucket``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#s3


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: events

         ``FunctionResource.S3EventProperty.Events``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#s3


         :type: string or :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: filter

         ``FunctionResource.S3EventProperty.Filter``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#s3


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.S3NotificationFilterProperty` or undefined


   .. py:class:: S3LocationProperty



      .. py:attribute:: bucket

         ``FunctionResource.S3LocationProperty.Bucket``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: key

         ``FunctionResource.S3LocationProperty.Key``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: version

         ``FunctionResource.S3LocationProperty.Version``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: S3NotificationFilterProperty



      .. py:attribute:: s3Key

         ``FunctionResource.S3NotificationFilterProperty.S3Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-s3-bucket-notificationconfiguration-config-filter.html


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SNSEventProperty



      .. py:attribute:: topic

         ``FunctionResource.SNSEventProperty.Topic``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#sns


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ScheduleEventProperty



      .. py:attribute:: input

         ``FunctionResource.ScheduleEventProperty.Input``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#schedule


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: schedule

         ``FunctionResource.ScheduleEventProperty.Schedule``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#schedule


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: VpcConfigProperty



      .. py:attribute:: securityGroupIds

         ``FunctionResource.VpcConfigProperty.SecurityGroupIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-vpcconfig.html


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: subnetIds

         ``FunctionResource.VpcConfigProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-vpcconfig.html


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`



FunctionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FunctionResourceProps



   .. py:attribute:: codeUri

      ``AWS::Serverless::Function.CodeUri``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.S3LocationProperty`


   .. py:attribute:: handler

      ``AWS::Serverless::Function.Handler``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: runtime

      ``AWS::Serverless::Function.Runtime``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: deadLetterQueue

      ``AWS::Serverless::Function.DeadLetterQueue``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.DeadLetterQueueProperty` or undefined


   .. py:attribute:: description

      ``AWS::Serverless::Function.Description``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: environment

      ``AWS::Serverless::Function.Environment``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.FunctionEnvironmentProperty` or undefined


   .. py:attribute:: events

      ``AWS::Serverless::Function.Events``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.EventSourceProperty` or undefined


   .. py:attribute:: functionName

      ``AWS::Serverless::Function.FunctionName``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: kmsKeyArn

      ``AWS::Serverless::Function.KmsKeyArn``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: memorySize

      ``AWS::Serverless::Function.MemorySize``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: policies

      ``AWS::Serverless::Function.Policies``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.IAMPolicyDocumentProperty` or string or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.IAMPolicyDocumentProperty` or undefined


   .. py:attribute:: role

      ``AWS::Serverless::Function.Role``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::Serverless::Function.Tags``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: timeout

      ``AWS::Serverless::Function.Timeout``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tracing

      ``AWS::Serverless::Function.Tracing``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: vpcConfig

      ``AWS::Serverless::Function.VpcConfig``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.FunctionResource.VpcConfigProperty` or undefined


SimpleTableResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: SimpleTableResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SimpleTableResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SimpleTableResource``
   :type properties: :py:class:`~@aws-cdk/aws-serverless.cloudformation.SimpleTableResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: requiredTransform

      The ``Transform`` a template must use in order to use this resource


      :type: string *(readonly)* *(static)*

   .. py:class:: PrimaryKeyProperty



      .. py:attribute:: name

         ``SimpleTableResource.PrimaryKeyProperty.Name``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#primary-key-object


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SimpleTableResource.PrimaryKeyProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#primary-key-object


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ProvisionedThroughputProperty



      .. py:attribute:: readCapacityUnits

         ``SimpleTableResource.ProvisionedThroughputProperty.ReadCapacityUnits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: writeCapacityUnits

         ``SimpleTableResource.ProvisionedThroughputProperty.WriteCapacityUnits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html


         :type: number or :py:class:`@aws-cdk/cdk.Token`



SimpleTableResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SimpleTableResourceProps



   .. py:attribute:: primaryKey

      ``AWS::Serverless::SimpleTable.PrimaryKey``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#primary-key-object


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.SimpleTableResource.PrimaryKeyProperty` or undefined


   .. py:attribute:: provisionedThroughput

      ``AWS::Serverless::SimpleTable.ProvisionedThroughput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-serverless.cloudformation.SimpleTableResource.ProvisionedThroughputProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-serverless

